--- a/front/public/index.html
+++ b/front/public/index.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#2296f3" />
         <meta name="title" content="CtrlShift" />
+        <link rel="shortcut icon" href="favicon.ico" />
         <link rel="icon" href="favicon.ico" />
 
         <link rel="preconnect" href="https://fonts.gstatic.com" />
